--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ latex:
 bibtex_bibfiles:
   - references.bib
 
+execute:
+  execute_notebooks: cache
+
 # Information about where the book exists on the web
 # repository:
 #  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
